@@ -2,7 +2,7 @@ package com.github.marcelcoding.luna.cacti.service;
 
 import com.github.marcelcoding.luna.cacti.NotFoundException;
 import com.github.marcelcoding.luna.cacti.api.CactusHistoryEntry;
-import com.github.marcelcoding.luna.cacti.model.CactusHistoryEntryModel;
+import com.github.marcelcoding.luna.cacti.converter.CactusHistoryEntryConverter;
 import com.github.marcelcoding.luna.cacti.model.CactusHistoryEntryModel.Id;
 import com.github.marcelcoding.luna.cacti.model.CactusModel;
 import com.github.marcelcoding.luna.cacti.repository.CactusHistoryRepository;
@@ -10,8 +10,8 @@ import com.github.marcelcoding.luna.cacti.repository.CactusRepository;
 import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.NotImplementedException;
 import org.springframework.stereotype.Service;
 
 @Service
@@ -20,12 +20,13 @@ public class CactusHistoryService {
 
   private final CactusRepository cactusRepository;
   private final CactusHistoryRepository cactusHistoryRepository;
+  private final CactusHistoryEntryConverter cactusHistoryEntryConverter;
 
   public List<CactusHistoryEntry> findHistory(final UUID cactusId) {
     return this.cactusHistoryRepository.findAllOrderByTimestamp(cactusId)
       .stream()
-      .map(CactusHistoryEntryModel::toDto)
-      .collect(Collectors.toList());
+      .map(this.cactusHistoryEntryConverter::toDto)
+      .toList();
   }
 
   public boolean exist(final UUID cactusId, final OffsetDateTime timestamp) {
@@ -35,16 +36,9 @@ public class CactusHistoryService {
     return this.cactusHistoryRepository.existsById(new Id(cactusModel, timestamp));
   }
 
+
   public CactusHistoryEntry save(final UUID cactusId, final CactusHistoryEntry historyEntry) {
-    final CactusModel cactusModel = this.cactusRepository.findById(cactusId)
-      .orElseThrow(() -> new NotFoundException(cactusId, "CACTUS_NOT_FOUND"));
-
-    final CactusHistoryEntryModel model = new CactusHistoryEntryModel(
-      historyEntry,
-      cactusModel
-    );
-
-    return this.cactusHistoryRepository.save(model).toDto();
+    throw new NotImplementedException();
   }
 
   public void delete(final UUID cactusId, final OffsetDateTime timestamp) {
