@@ -3,12 +3,10 @@ package com.github.marcelcoding.luna.cacti.service;
 import com.github.marcelcoding.luna.cacti.NotFoundException;
 import com.github.marcelcoding.luna.cacti.PropertyNotFoundException;
 import com.github.marcelcoding.luna.cacti.api.Form;
+import com.github.marcelcoding.luna.cacti.converter.FormConverter;
 import com.github.marcelcoding.luna.cacti.model.FormModel;
-import com.github.marcelcoding.luna.cacti.model.SpecieModel;
 import com.github.marcelcoding.luna.cacti.repository.FormRepository;
-import com.github.marcelcoding.luna.cacti.repository.SpecieRepository;
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -21,13 +19,13 @@ import org.springframework.stereotype.Service;
 @RequiredArgsConstructor
 public final class FormService {
 
-  private final SpecieRepository specieRepository;
   private final FormRepository formRepository;
+  private final FormConverter formConverter;
 
   public Set<Form> findAll() {
     return this.formRepository.findAll()
       .stream()
-      .map(FormModel::toDto)
+      .map(this.formConverter::toDto)
       .collect(Collectors.toSet());
   }
 
@@ -35,8 +33,8 @@ public final class FormService {
     try {
       return this.formRepository.findAll(sort)
         .stream()
-        .map(FormModel::toDto)
-        .collect(Collectors.toList());
+        .map(this.formConverter::toDto)
+        .toList();
     }
     catch (PropertyReferenceException e) {
       throw new PropertyNotFoundException(e);
@@ -48,18 +46,20 @@ public final class FormService {
   }
 
   public Form save(final Form form) throws NotFoundException {
-    final Optional<SpecieModel> specieModel = this.specieRepository.findById(form.getSpecieId());
-
-    if (specieModel.isEmpty()) {
-      throw new NotFoundException(form.getSpecieId(), "SPECIE_NOT_FOUND");
-    }
-
-    final FormModel model = new FormModel(
-      form,
-      specieModel.get()
+    return this.formConverter.toDto(
+      this.formRepository.save(
+        this.formConverter.toModel(form)
+      )
     );
+  }
 
-    return this.formRepository.save(model).toDto();
+  public Form save(final UUID id, final Form form) throws NotFoundException {
+    final FormModel model = this.formRepository.findById(id)
+      .orElseThrow(() -> new NotFoundException(id, "FORM_NOT_FOUND"));
+
+    this.formConverter.override(model, form);
+
+    return this.formConverter.toDto(this.formRepository.save(model));
   }
 
   public void delete(final UUID id) throws NotFoundException {
