@@ -3,6 +3,7 @@ package com.github.marcelcoding.luna.cacti.service;
 import com.github.marcelcoding.luna.cacti.NotFoundException;
 import com.github.marcelcoding.luna.cacti.PropertyNotFoundException;
 import com.github.marcelcoding.luna.cacti.api.Genus;
+import com.github.marcelcoding.luna.cacti.converter.GenusConverter;
 import com.github.marcelcoding.luna.cacti.model.GenusModel;
 import com.github.marcelcoding.luna.cacti.repository.GenusRepository;
 import java.util.List;
@@ -19,11 +20,12 @@ import org.springframework.stereotype.Service;
 public final class GenusService {
 
   private final GenusRepository genusRepository;
+  private final GenusConverter genusConverter;
 
   public Set<Genus> findAll() {
     return this.genusRepository.findAll()
       .stream()
-      .map(GenusModel::toDto)
+      .map(this.genusConverter::toDto)
       .collect(Collectors.toSet());
   }
 
@@ -31,8 +33,8 @@ public final class GenusService {
     try {
       return this.genusRepository.findAll(sort)
         .stream()
-        .map(GenusModel::toDto)
-        .collect(Collectors.toList());
+        .map(this.genusConverter::toDto)
+        .toList();
     }
     catch (PropertyReferenceException e) {
       throw new PropertyNotFoundException(e);
@@ -44,9 +46,20 @@ public final class GenusService {
   }
 
   public Genus save(final Genus genus) {
-    final GenusModel model = new GenusModel(genus);
+    return this.genusConverter.toDto(
+      this.genusRepository.save(
+        this.genusConverter.toModel(genus)
+      )
+    );
+  }
 
-    return this.genusRepository.save(model).toDto();
+  public Genus save(final UUID id, final Genus genus) {
+    final GenusModel model = this.genusRepository.findById(id)
+      .orElseThrow(() -> new NotFoundException(id, "GENUS_NOT_FOUND"));
+
+    this.genusConverter.override(model, genus);
+
+    return this.genusConverter.toDto(this.genusRepository.save(model));
   }
 
 //  public Genus patch(final Genus genus) {
